[gd_scene load_steps=25 format=4 uid="uid://cwhxoekx31fbt"]

[ext_resource type="Script" uid="uid://dxpy44vk3x3ld" path="res://main.gd" id="1_r0du0"]
[ext_resource type="PackedScene" uid="uid://q03al72pqq1b" path="res://Mob.tscn" id="2_cm0pq"]
[ext_resource type="PackedScene" uid="uid://dy0px68yjpmsn" path="res://Player.tscn" id="3_fos0i"]
[ext_resource type="PackedScene" uid="uid://bcbf0ub5i73qf" path="res://coin.tscn" id="3_trn2v"]
[ext_resource type="PackedScene" uid="uid://bhoalk6r08df" path="res://audio_manager.tscn" id="4_03owx"]
[ext_resource type="Texture2D" uid="uid://io1cex7k5crn" path="res://Pixel Crawler - Free Pack/Environment/Structures/Buildings/Props.png" id="4_20pc6"]
[ext_resource type="PackedScene" uid="uid://df0tak08dsi8b" path="res://HUD.tscn" id="4_cm0pq"]
[ext_resource type="TileSet" uid="uid://bymy4ohnadimj" path="res://Pixel Crawler - Free Pack/Environment/Tilesets/Floors.tres" id="4_wkp8b"]
[ext_resource type="AudioStream" uid="uid://bu1eh6aa4frk4" path="res://dodge_the_creeps_2d_assets/art/House In a Forest Loop.ogg" id="5_fos0i"]
[ext_resource type="AudioStream" uid="uid://3qpgg17f71t2" path="res://success_bell-6776.mp3" id="5_lgr22"]
[ext_resource type="AudioStream" uid="uid://cplg6cjjcdq6t" path="res://dodge_the_creeps_2d_assets/art/gameover.wav" id="6_3dxm6"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_20pc6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5vvyt"]
texture = ExtResource("4_20pc6")
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
5:10/0/terrain_set = 0
6:10/0 = 0
6:10/0/terrain_set = 0
7:10/0 = 0
7:10/0/terrain_set = 0
8:10/0 = 0
8:10/0/terrain_set = 0
1:11/0 = 0
1:11/0/terrain_set = 0
1:11/0/terrain = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:11/0/terrains_peering_bit/right_side = 0
1:11/0/terrains_peering_bit/bottom_right_corner = 0
1:11/0/terrains_peering_bit/bottom_side = 0
1:11/0/terrains_peering_bit/top_side = 0
1:11/0/terrains_peering_bit/top_right_corner = 0
2:11/0 = 0
2:11/0/terrain_set = 0
2:11/0/terrain = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
2:11/0/terrains_peering_bit/right_side = 0
2:11/0/terrains_peering_bit/bottom_right_corner = 0
2:11/0/terrains_peering_bit/bottom_side = 0
2:11/0/terrains_peering_bit/bottom_left_corner = 0
2:11/0/terrains_peering_bit/left_side = 0
2:11/0/terrains_peering_bit/top_left_corner = 0
2:11/0/terrains_peering_bit/top_side = 0
2:11/0/terrains_peering_bit/top_right_corner = 0
3:11/0 = 0
3:11/0/terrain_set = 0
3:11/0/terrain = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
3:11/0/terrains_peering_bit/bottom_side = 0
3:11/0/terrains_peering_bit/bottom_left_corner = 0
3:11/0/terrains_peering_bit/left_side = 0
3:11/0/terrains_peering_bit/top_left_corner = 0
3:11/0/terrains_peering_bit/top_side = 0
5:11/0 = 0
5:11/0/terrain_set = 0
6:11/0 = 0
6:11/0/terrain_set = 0
7:11/0 = 0
7:11/0/terrain_set = 0
8:11/0 = 0
8:11/0/terrain_set = 0
0:12/0 = 0
0:12/0/terrain_set = 0
0:12/0/terrain = 0
0:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:12/0/terrains_peering_bit/right_side = 0
0:12/0/terrains_peering_bit/bottom_right_corner = 0
0:12/0/terrains_peering_bit/bottom_side = 0
0:12/0/terrains_peering_bit/top_side = 0
0:12/0/terrains_peering_bit/top_right_corner = 0
1:12/0 = 0
1:12/0/terrain_set = 0
1:12/0/terrain = 0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
1:12/0/terrains_peering_bit/bottom_side = 0
1:12/0/terrains_peering_bit/bottom_left_corner = 0
1:12/0/terrains_peering_bit/left_side = 0
1:12/0/terrains_peering_bit/top_left_corner = 0
1:12/0/terrains_peering_bit/top_side = 0
3:12/0 = 0
3:12/0/terrain_set = 0
3:12/0/terrain = 0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:12/0/terrains_peering_bit/right_side = 0
3:12/0/terrains_peering_bit/bottom_right_corner = 0
3:12/0/terrains_peering_bit/bottom_side = 0
3:12/0/terrains_peering_bit/top_side = 0
3:12/0/terrains_peering_bit/top_right_corner = 0
4:12/0 = 0
4:12/0/terrain_set = 0
4:12/0/terrain = 0
4:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:12/0/terrains_peering_bit/bottom_side = 0
4:12/0/terrains_peering_bit/bottom_left_corner = 0
4:12/0/terrains_peering_bit/left_side = 0
4:12/0/terrains_peering_bit/top_left_corner = 0
4:12/0/terrains_peering_bit/top_side = 0
0:13/0 = 0
0:13/0/terrain_set = 0
0:13/0/terrain = 0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:13/0/terrains_peering_bit/bottom_side = 0
0:13/0/terrains_peering_bit/top_side = 0
4:13/0 = 0
4:13/0/terrain_set = 0
4:13/0/terrain = 0
4:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:13/0/terrains_peering_bit/bottom_side = 0
4:13/0/terrains_peering_bit/top_side = 0
0:14/0 = 0
0:14/0/terrain_set = 0
0:14/0/terrain = 0
0:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:14/0/terrains_peering_bit/right_side = 0
0:14/0/terrains_peering_bit/bottom_right_corner = 0
0:14/0/terrains_peering_bit/bottom_side = 0
0:14/0/terrains_peering_bit/top_side = 0
0:14/0/terrains_peering_bit/top_right_corner = 0
1:14/0 = 0
1:14/0/terrain_set = 0
1:14/0/terrain = 0
1:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:14/0/terrains_peering_bit/bottom_side = 0
1:14/0/terrains_peering_bit/bottom_left_corner = 0
1:14/0/terrains_peering_bit/left_side = 0
1:14/0/terrains_peering_bit/top_left_corner = 0
1:14/0/terrains_peering_bit/top_side = 0
3:14/0 = 0
3:14/0/terrain_set = 0
3:14/0/terrain = 0
3:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:14/0/terrains_peering_bit/right_side = 0
3:14/0/terrains_peering_bit/bottom_right_corner = 0
3:14/0/terrains_peering_bit/bottom_side = 0
3:14/0/terrains_peering_bit/top_side = 0
3:14/0/terrains_peering_bit/top_right_corner = 0
4:14/0 = 0
4:14/0/terrain_set = 0
4:14/0/terrain = 0
4:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:14/0/terrains_peering_bit/bottom_side = 0
4:14/0/terrains_peering_bit/bottom_left_corner = 0
4:14/0/terrains_peering_bit/left_side = 0
4:14/0/terrains_peering_bit/top_left_corner = 0
4:14/0/terrains_peering_bit/top_side = 0
0:15/0 = 0
1:15/0 = 0
1:15/0/terrain_set = 0
1:15/0/terrain = 0
1:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:15/0/terrains_peering_bit/right_side = 0
1:15/0/terrains_peering_bit/bottom_right_corner = 0
1:15/0/terrains_peering_bit/bottom_side = 0
1:15/0/terrains_peering_bit/top_side = 0
1:15/0/terrains_peering_bit/top_right_corner = 0
2:15/0 = 0
2:15/0/terrain_set = 0
2:15/0/terrain = 0
2:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:15/0/terrains_peering_bit/right_side = 0
2:15/0/terrains_peering_bit/bottom_right_corner = 0
2:15/0/terrains_peering_bit/bottom_side = 0
2:15/0/terrains_peering_bit/bottom_left_corner = 0
2:15/0/terrains_peering_bit/left_side = 0
2:15/0/terrains_peering_bit/top_left_corner = 0
2:15/0/terrains_peering_bit/top_side = 0
2:15/0/terrains_peering_bit/top_right_corner = 0
3:15/0 = 0
3:15/0/terrain_set = 0
3:15/0/terrain = 0
3:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:15/0/terrains_peering_bit/bottom_side = 0
3:15/0/terrains_peering_bit/bottom_left_corner = 0
3:15/0/terrains_peering_bit/left_side = 0
3:15/0/terrains_peering_bit/top_left_corner = 0
3:15/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_c6i3y"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
physics_layer_0/physics_material = SubResource("PhysicsMaterial_20pc6")
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Props"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_5vvyt")

[sub_resource type="Curve2D" id="Curve2D_3dxm6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 85.3333, 85.3333, 0, 0, 0, 0, 2474.67, 85.3333, 0, 0, 0, 0, 2474.67, 1365.33, 0, 0, 0, 0, 85.3333, 1365.33, 0, 0, 0, 0, 85.3333, 85.3333)
}
point_count = 5

[sub_resource type="Gradient" id="Gradient_03owx"]
offsets = PackedFloat32Array(0, 0.587662)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_trn2v"]
gradient = SubResource("Gradient_03owx")
fill = 1
fill_from = Vector2(0.493119, 0.465596)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_trn2v"]
normal = Vector2(0, 1)
distance = 24.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_20pc6"]
normal = Vector2(1, 0)
distance = -8.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_03owx"]
distance = -1000.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_wkp8b"]
normal = Vector2(-1, 0)
distance = -1384.0

[sub_resource type="Gradient" id="Gradient_trn2v"]
offsets = PackedFloat32Array(0.152985, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_03owx"]
gradient = SubResource("Gradient_trn2v")

[sub_resource type="Environment" id="Environment_trn2v"]
background_mode = 3
adjustment_enabled = true
adjustment_color_correction = SubResource("GradientTexture1D_03owx")

[node name="Main" type="Node2D"]
script = ExtResource("1_r0du0")
mob_scene = ExtResource("2_cm0pq")
coin_scene = ExtResource("3_trn2v")

[node name="Props" type="TileMapLayer" parent="."]
z_index = 1
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAdAAoAAAAAAA0AAAAAABAAAAAAAA4AAAAAAA8AAAAAAA0AAAAAAA4AAAAAAA0AAAAAAA0AAAAAAA0AAAAAAAwAAAAAAA0AAAAAAAoAAAAAAA0AAAAAAAIAAAAAAA0AAAAAAAMAAAAAAA0AAAAAAAQAAAAAAA0AAAAAAAAAAAABAAsAAAAAAAEAAAAAAA0AAAAAAAUAAAAAAA0AAAAAAAsAAAAAAA0AAAAXAAAAAAACAAsAAAAYAAAAAAACAAsAAAAZAAAAAAACAAsAAAAaAAAAAAACAAsAAAAbAAAAAAACAAsAAAAcAAAAAAACAAsAAAAdAAAAAAADAAsAAAAdAAEAAAAAAA0AAAAdAAIAAAAAAA0AAAAdAAMAAAAAAA0AAAAdAAQAAAAAAA0AAAAdAAUAAAAAAA0AAAAdAAsAAAAAAA0AAAAdAAwAAAAAAA0AAAAdAA0AAAAAAA0AAAAdAA4AAAAAAA0AAAAdAA8AAAAAAA0AAAAdABAAAAAEAA4AAAABAAAAAAACAAsAAAACAAAAAAACAAsAAAADAAAAAAACAAsAAAAEAAAAAAACAAsAAAAFAAAAAAACAAsAAAAGAAAAAAACAAsAAAAHAAAAAAACAAsAAAAIAAAAAAACAAsAAAAJAAAAAAACAAsAAAAKAAAAAAACAAsAAAALAAAAAAACAAsAAAAMAAAAAAACAAsAAAARAAAAAAACAAsAAAASAAAAAAACAAsAAAATAAAAAAACAAsAAAAUAAAAAAACAAsAAAAVAAAAAAACAAsAAAAWAAAAAAACAAsAAAABABAAAAACAA8AAAACABAAAAACAA8AAAADABAAAAACAA8AAAAEABAAAAACAA8AAAAFABAAAAACAA8AAAAGABAAAAACAA8AAAAHABAAAAACAA8AAAAIABAAAAACAA8AAAAJABAAAAACAA8AAAAKABAAAAACAA8AAAALABAAAAACAA8AAAAMABAAAAACAA8AAAARABAAAAACAA8AAAASABAAAAACAA8AAAATABAAAAACAA8AAAAUABAAAAACAA8AAAAVABAAAAACAA8AAAAWABAAAAACAA8AAAAXABAAAAACAA8AAAAYABAAAAACAA8AAAAZABAAAAACAA8AAAAaABAAAAACAA8AAAAbABAAAAACAA8AAAAcABAAAAACAA8AAAA=")
enabled = false
tile_set = SubResource("TileSet_c6i3y")
use_kinematic_bodies = true
collision_visibility_mode = 1

[node name="Background" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAOAAoAAAACAAoAAAAPAAoAAAACAAoAAAAQAAoAAAACAAoAAAARAAoAAAACAAoAAAASAAoAAAACAAoAAAATAAoAAAACAAoAAAAUAAoAAAACAAoAAAAVAAoAAAACAAoAAAAWAAoAAAACAAoAAAAXAAoAAAACAAoAAAAYAAoAAAACAAoAAAAZAAoAAAACAAoAAAAaAAoAAAACAAoAAAAbAAoAAAACAAoAAAAcAAoAAAACAAoAAAAdAAoAAAACAAoAAAAEAAUAAAACAAoAAAAFAAUAAAACAAoAAAAGAAUAAAACAAoAAAAHAAUAAAACAAoAAAAIAAUAAAACAAoAAAAJAAUAAAACAAoAAAAKAAUAAAACAAoAAAALAAUAAAACAAoAAAAMAAUAAAACAAoAAAANAAUAAAACAAoAAAAOAAUAAAACAAoAAAAPAAUAAAACAAoAAAAQAAUAAAACAAoAAAARAAUAAAACAAoAAAASAAUAAAACAAoAAAATAAUAAAACAAoAAAAUAAUAAAACAAoAAAAVAAUAAAACAAoAAAAWAAUAAAACAAoAAAAXAAUAAAACAAoAAAAYAAUAAAACAAoAAAAZAAUAAAACAAoAAAAaAAUAAAACAAoAAAAbAAUAAAACAAoAAAARAAYAAAACAAoAAAAQAAYAAAACAAoAAAAPAAcAAAACAAoAAAAOAAcAAAACAAoAAAAOAAgAAAACAAoAAAANAAgAAAACAAoAAAANAAkAAAACAAoAAAAMAAoAAAACAAoAAAAMAAsAAAACAAoAAAALAAwAAAACAAoAAAALAA0AAAACAAoAAAAKAA0AAAACAAoAAAAHAAYAAAACAAoAAAAIAAYAAAACAAoAAAAJAAcAAAACAAoAAAAJAAgAAAACAAoAAAAKAAkAAAACAAoAAAALAAoAAAACAAoAAAALAAsAAAACAAoAAAAMAAwAAAACAAoAAAANAA0AAAACAAoAAAAOAA4AAAACAAoAAAAPAA8AAAACAAoAAAAPABAAAAACAAoAAAAPABEAAAACAAoAAAATABAAAAACAAoAAAAUAA8AAAACAAoAAAAVAA4AAAACAAoAAAATAA0AAAACAAoAAAAUAA0AAAACAAoAAAAVAA0AAAACAAoAAAAWAA0AAAACAAoAAAAXAA0AAAACAAoAAAAYAA0AAAACAAoAAAAZAA0AAAACAAoAAAAaAA0AAAACAAoAAAAaAA4AAAACAAoAAAASAA0AAAACAAoAAAASAA4AAAACAAoAAAATAA4AAAACAAoAAAAUAA4AAAACAAoAAAAWAA4AAAACAAoAAAAXAA4AAAACAAoAAAAYAA4AAAACAAoAAAASABEAAAACAAoAAAATABEAAAACAAoAAAAUABEAAAACAAoAAAAVABEAAAACAAoAAAAWABEAAAACAAoAAAAXABEAAAACAAoAAAAYABEAAAACAAoAAAAYABAAAAACAAoAAAAXABAAAAACAAoAAAAXAA8AAAACAAoAAAAWAA8AAAACAAoAAAAVAAwAAAACAAoAAAAUAAsAAAACAAoAAAAUAAkAAAACAAoAAAATAAkAAAACAAoAAAAVAAkAAAACAAoAAAAWAAkAAAACAAoAAAAXAAkAAAACAAoAAAAYAAkAAAACAAoAAAAZAAkAAAACAAoAAAAZAAgAAAACAAoAAAAaAAgAAAACAAoAAAAZAAcAAAACAAoAAAAYAAcAAAACAAoAAAAXAAcAAAACAAoAAAAWAAcAAAACAAoAAAAVAAcAAAACAAoAAAAUAAcAAAACAAoAAAATAAcAAAACAAoAAAATAAgAAAACAAoAAAASAAgAAAACAAoAAAASAAkAAAACAAoAAAARAAsAAAACAAoAAAARAAwAAAACAAoAAAARAA0AAAACAAoAAAARAA4AAAACAAoAAAAQAA8AAAACAAoAAAAQABAAAAACAAoAAAAQABEAAAACAAoAAAAZABEAAAACAAoAAAAaABAAAAACAAoAAAAaAA8AAAACAAoAAAAbAAwAAAACAAoAAAAbAAsAAAACAAoAAAAbAAkAAAACAAoAAAAaAAkAAAACAAoAAAAVAAsAAAACAAoAAAAUAAwAAAACAAoAAAATAA8AAAACAAoAAAASABAAAAACAAoAAAARABEAAAACAAoAAAABABEAAAACAAoAAAAAABAAAAACAAoAAAAAAA8AAAACAAoAAAAAAA4AAAACAAoAAAAAAA0AAAACAAoAAAAAAAwAAAACAAoAAAABAAwAAAACAAoAAAABAAsAAAACAAoAAAABAAoAAAACAAoAAAACAAkAAAACAAoAAAADAAgAAAACAAoAAAADAAcAAAACAAoAAAADAAYAAAACAAoAAAAEAAYAAAACAAoAAAADAAUAAAACAAoAAAACAAUAAAACAAoAAAABAAUAAAACAAoAAAABAAQAAAACAAoAAAABAAMAAAACAAoAAAACAAMAAAACAAoAAAADAAMAAAACAAoAAAADAAQAAAACAAoAAAAEAAQAAAACAAoAAAAEAAMAAAACAAoAAAAFAAIAAAACAAoAAAAFAAEAAAACAAoAAAAEAAEAAAACAAoAAAAEAAIAAAACAAoAAAADAAIAAAACAAoAAAACAAIAAAACAAoAAAACAAEAAAACAAoAAAACAAAAAAACAAoAAAABAAYAAAACAAoAAAAAAAcAAAACAAoAAAAAAAgAAAACAAoAAAAAAAkAAAACAAoAAAAAAAoAAAACAAoAAAACAAsAAAACAAoAAAADAAsAAAACAAoAAAAEAAsAAAACAAoAAAAFAAsAAAACAAoAAAAGAAsAAAACAAoAAAAHAAsAAAACAAoAAAAIAAsAAAACAAoAAAAJAAsAAAACAAoAAAAKAAsAAAACAAoAAAANAAsAAAACAAoAAAAOAAsAAAACAAoAAAAPAAsAAAACAAoAAAAPAAwAAAACAAoAAAAQAAwAAAACAAoAAAASAAwAAAACAAoAAAASAA8AAAACAAoAAAARABAAAAACAAoAAAAAAAIAAAACAAoAAAAAAAMAAAACAAoAAAAAAAQAAAACAAoAAAAGAAYAAAACAAoAAAAGAAcAAAACAAoAAAADAAAAAAACAAoAAAAEAAAAAAACAAoAAAAFAAAAAAACAAoAAAAGAAAAAAACAAoAAAAHAAAAAAACAAoAAAAIAAAAAAACAAoAAAAOAAkAAAACAAoAAAAPAAkAAAACAAoAAAANAAoAAAACAAoAAAAMAAQAAAACAAoAAAAMAAYAAAACAAoAAAANAAMAAAACAAoAAAANAAQAAAACAAoAAAANAAYAAAACAAoAAAANAAcAAAACAAoAAAAOAAMAAAACAAoAAAAOAAQAAAACAAoAAAAOAAYAAAACAAoAAAAPAAMAAAACAAoAAAAPAAQAAAACAAoAAAAPAAYAAAACAAoAAAAQAAQAAAACAAoAAAAQAAMAAAACAAoAAAAQAAcAAAACAAoAAAARAAQAAAACAAoAAAAKAAQAAAACAAoAAAALAAQAAAACAAoAAAAKAAcAAAACAAoAAAAIAAcAAAACAAoAAAALAAcAAAACAAoAAAAMAAcAAAACAAoAAAAHAAcAAAACAAoAAAAFAAcAAAACAAoAAAAAAAAAAAACAAoAAAAAAAEAAAACAAoAAAAAAAUAAAACAAoAAAAAAAYAAAACAAoAAAAAAAsAAAACAAoAAAABAAAAAAACAAoAAAABAAEAAAACAAoAAAABAAIAAAACAAoAAAABAAcAAAACAAoAAAABAAgAAAACAAoAAAABAAkAAAACAAoAAAABAA0AAAACAAoAAAABAA4AAAACAAoAAAACAAQAAAACAAoAAAACAAYAAAACAAoAAAACAAcAAAACAAoAAAACAAgAAAACAAoAAAACAAoAAAACAAoAAAACAAwAAAACAAoAAAACAA0AAAACAAoAAAACAA4AAAACAAoAAAADAAEAAAACAAoAAAADAAkAAAACAAoAAAADAAoAAAACAAoAAAADAAwAAAACAAoAAAADAA0AAAACAAoAAAADAA4AAAACAAoAAAAEAAcAAAACAAoAAAAEAAgAAAACAAoAAAAEAAkAAAACAAoAAAAEAAoAAAACAAoAAAAEAAwAAAACAAoAAAAEAA0AAAACAAoAAAAEAA4AAAACAAoAAAAFAAMAAAACAAoAAAAFAAQAAAACAAoAAAAFAAYAAAACAAoAAAAFAAgAAAACAAoAAAAFAAkAAAACAAoAAAAFAAoAAAACAAoAAAAFAAwAAAACAAoAAAAFAA0AAAACAAoAAAAFAA4AAAACAAoAAAAGAAEAAAACAAoAAAAGAAIAAAACAAoAAAAGAAMAAAACAAoAAAAGAAQAAAACAAoAAAAGAAgAAAACAAoAAAAGAAkAAAACAAoAAAAGAAoAAAACAAoAAAAGAAwAAAACAAoAAAAGAA0AAAACAAoAAAAGAA4AAAACAAoAAAAHAAEAAAACAAoAAAAHAAIAAAACAAoAAAAHAAMAAAACAAoAAAAHAAQAAAACAAoAAAAHAAgAAAACAAoAAAAHAAkAAAACAAoAAAAHAAoAAAACAAoAAAAHAAwAAAACAAoAAAAHAA0AAAACAAoAAAAHAA4AAAACAAoAAAAIAAEAAAACAAoAAAAIAAIAAAACAAoAAAAIAAMAAAACAAoAAAAIAAQAAAACAAoAAAAIAAgAAAACAAoAAAAIAAkAAAACAAoAAAAIAAoAAAACAAoAAAAIAAwAAAACAAoAAAAIAA0AAAACAAoAAAAIAA4AAAACAAoAAAAJAAAAAAACAAoAAAAJAAEAAAACAAoAAAAJAAIAAAACAAoAAAAJAAMAAAACAAoAAAAJAAQAAAACAAoAAAAJAAYAAAACAAoAAAAJAAkAAAACAAoAAAAJAAoAAAACAAoAAAAJAAwAAAACAAoAAAAJAA0AAAACAAoAAAAJAA4AAAACAAoAAAAKAAAAAAACAAoAAAAKAAEAAAACAAoAAAAKAAIAAAACAAoAAAAKAAMAAAACAAoAAAAKAAYAAAACAAoAAAAKAAgAAAACAAoAAAAKAAoAAAACAAoAAAAKAAwAAAACAAoAAAAKAA4AAAACAAoAAAALAAAAAAACAAoAAAALAAEAAAACAAoAAAALAAIAAAACAAoAAAALAAMAAAACAAoAAAALAAYAAAACAAoAAAALAAgAAAACAAoAAAALAAkAAAACAAoAAAALAA4AAAACAAoAAAAMAAAAAAACAAoAAAAMAAEAAAACAAoAAAAMAAIAAAACAAoAAAAMAAMAAAACAAoAAAAMAAgAAAACAAoAAAAMAAkAAAACAAoAAAAMAA0AAAACAAoAAAAMAA4AAAACAAoAAAANAAAAAAACAAoAAAANAAEAAAACAAoAAAANAAIAAAACAAoAAAANAAwAAAACAAoAAAANAA4AAAACAAoAAAAOAAAAAAACAAoAAAAOAAEAAAACAAoAAAAOAAIAAAACAAoAAAAOAAwAAAACAAoAAAAOAA0AAAACAAoAAAAPAAAAAAACAAoAAAAPAAEAAAACAAoAAAAPAAIAAAACAAoAAAAPAAgAAAACAAoAAAAPAA0AAAACAAoAAAAPAA4AAAACAAoAAAAQAAAAAAACAAoAAAAQAAEAAAACAAoAAAAQAAIAAAACAAoAAAAQAAgAAAACAAoAAAAQAAkAAAACAAoAAAAQAAsAAAACAAoAAAAQAA0AAAACAAoAAAAQAA4AAAACAAoAAAARAAAAAAACAAoAAAARAAEAAAACAAoAAAARAAIAAAACAAoAAAARAAMAAAACAAoAAAARAAcAAAACAAoAAAARAAgAAAACAAoAAAARAAkAAAACAAoAAAASAAAAAAACAAoAAAASAAEAAAACAAoAAAASAAIAAAACAAoAAAASAAMAAAACAAoAAAASAAQAAAACAAoAAAASAAYAAAACAAoAAAASAAcAAAACAAoAAAASAAsAAAACAAoAAAATAAAAAAACAAoAAAATAAEAAAACAAoAAAATAAIAAAACAAoAAAATAAMAAAACAAoAAAATAAQAAAACAAoAAAATAAYAAAACAAoAAAATAAsAAAACAAoAAAATAAwAAAACAAoAAAAUAAAAAAACAAoAAAAUAAEAAAACAAoAAAAUAAIAAAACAAoAAAAUAAMAAAACAAoAAAAUAAQAAAACAAoAAAAUAAYAAAACAAoAAAAUAAgAAAACAAoAAAAVAAAAAAACAAoAAAAVAAEAAAACAAoAAAAVAAIAAAACAAoAAAAVAAMAAAACAAoAAAAVAAQAAAACAAoAAAAVAAYAAAACAAoAAAAVAAgAAAACAAoAAAAWAAAAAAACAAoAAAAWAAEAAAACAAoAAAAWAAIAAAACAAoAAAAWAAMAAAACAAoAAAAWAAQAAAACAAoAAAAWAAYAAAACAAoAAAAWAAgAAAACAAoAAAAWAAsAAAACAAoAAAAWAAwAAAACAAoAAAAXAAAAAAACAAoAAAAXAAEAAAACAAoAAAAXAAIAAAACAAoAAAAXAAMAAAACAAoAAAAXAAQAAAACAAoAAAAXAAYAAAACAAoAAAAXAAgAAAACAAoAAAAXAAsAAAACAAoAAAAXAAwAAAACAAoAAAAYAAAAAAACAAoAAAAYAAEAAAACAAoAAAAYAAIAAAACAAoAAAAYAAMAAAACAAoAAAAYAAQAAAACAAoAAAAYAAYAAAACAAoAAAAYAAgAAAACAAoAAAAYAAsAAAACAAoAAAAYAAwAAAACAAoAAAAZAAAAAAACAAoAAAAZAAEAAAACAAoAAAAZAAIAAAACAAoAAAAZAAMAAAACAAoAAAAZAAQAAAACAAoAAAAZAAYAAAACAAoAAAAZAAsAAAACAAoAAAAZAAwAAAACAAoAAAAZAA4AAAACAAoAAAAaAAAAAAACAAoAAAAaAAEAAAACAAoAAAAaAAIAAAACAAoAAAAaAAMAAAACAAoAAAAaAAQAAAACAAoAAAAaAAYAAAACAAoAAAAaAAcAAAACAAoAAAAaAAsAAAACAAoAAAAaAAwAAAACAAoAAAAbAAAAAAACAAoAAAAbAAEAAAACAAoAAAAbAAIAAAACAAoAAAAbAAMAAAACAAoAAAAbAAQAAAACAAoAAAAbAAYAAAACAAoAAAAbAAcAAAACAAoAAAAbAAgAAAACAAoAAAAbAA0AAAACAAoAAAAbAA4AAAACAAoAAAAcAAAAAAACAAoAAAAcAAEAAAACAAoAAAAcAAIAAAACAAoAAAAcAAMAAAACAAoAAAAcAAQAAAACAAoAAAAcAAUAAAACAAoAAAAcAAYAAAACAAoAAAAcAAcAAAACAAoAAAAcAAgAAAACAAoAAAAcAAkAAAACAAoAAAAcAAsAAAACAAoAAAAcAAwAAAACAAoAAAAcAA0AAAACAAoAAAAcAA4AAAACAAoAAAABAA8AAAACAAoAAAABABAAAAACAAoAAAACAA8AAAACAAoAAAACABAAAAACAAoAAAADAA8AAAACAAoAAAADABAAAAACAAoAAAAEAA8AAAACAAoAAAAEABAAAAACAAoAAAAFAA8AAAACAAoAAAAFABAAAAACAAoAAAAGAA8AAAACAAoAAAAGABAAAAACAAoAAAAHAA8AAAACAAoAAAAHABAAAAACAAoAAAAIAA8AAAACAAoAAAAIABAAAAACAAoAAAAJAA8AAAACAAoAAAAJABAAAAACAAoAAAAKAA8AAAACAAoAAAAKABAAAAACAAoAAAALAA8AAAACAAoAAAALABAAAAACAAoAAAAMAA8AAAACAAoAAAAMABAAAAACAAoAAAANAA8AAAACAAoAAAANABAAAAACAAoAAAAOAA8AAAACAAoAAAAOABAAAAACAAoAAAARAA8AAAACAAoAAAAUABAAAAACAAoAAAAVAA8AAAACAAoAAAAVABAAAAACAAoAAAAWABAAAAACAAoAAAAYAA8AAAACAAoAAAAZAA8AAAACAAoAAAAZABAAAAACAAoAAAAbAA8AAAACAAoAAAAbABAAAAACAAoAAAAcAA8AAAACAAoAAAAcABAAAAACAAoAAAAAABEAAAACAAoAAAACABEAAAACAAoAAAADABEAAAACAAoAAAAEABEAAAACAAoAAAAFABEAAAACAAoAAAAGABEAAAACAAoAAAAHABEAAAACAAoAAAAIABEAAAACAAoAAAAJABEAAAACAAoAAAAKABEAAAACAAoAAAALABEAAAACAAoAAAAMABEAAAACAAoAAAANABEAAAACAAoAAAAOABEAAAACAAoAAAAaABEAAAACAAoAAAAbABEAAAACAAoAAAAcABEAAAACAAoAAAAdAAAAAAACAAoAAAAdAAEAAAACAAoAAAAdAAIAAAACAAoAAAAdAAMAAAACAAoAAAAdAAQAAAACAAoAAAAdAAUAAAACAAoAAAAdAAYAAAACAAoAAAAdAAcAAAACAAoAAAAdAAgAAAACAAoAAAAdAAkAAAACAAoAAAAdAAsAAAACAAoAAAAdAAwAAAACAAoAAAAdAA0AAAACAAoAAAAdAA4AAAACAAoAAAAdAA8AAAACAAoAAAAdABAAAAACAAoAAAAdABEAAAACAAoAAAA=")
tile_set = ExtResource("4_wkp8b")

[node name="AudioManager" parent="." instance=ExtResource("4_03owx")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(960, 720)

[node name="MobPath" type="Path2D" parent="."]
scale = Vector2(0.75, 0.75)
curve = SubResource("Curve2D_3dxm6")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(2474.67, 95.9885)
rotation = 1.5708
progress = 2400.0

[node name="HUD" parent="." instance=ExtResource("4_cm0pq")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fos0i")
parameters/looping = false

[node name="GameWin" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-394, 186)
stream = ExtResource("5_lgr22")
volume_db = 10.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-197, 93)
stream = ExtResource("6_3dxm6")

[node name="Player" parent="." instance=ExtResource("3_fos0i")]
position = Vector2(960, 720)
wall_min_slide_angle = 1.5708
platform_wall_layers = 3
speed = 400

[node name="PointLight2D" type="PointLight2D" parent="Player"]
texture = SubResource("GradientTexture2D_trn2v")
texture_scale = 4.57

[node name="World" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="Top" type="CollisionShape2D" parent="World"]
position = Vector2(32, 8)
shape = SubResource("WorldBoundaryShape2D_trn2v")

[node name="Left" type="CollisionShape2D" parent="World"]
position = Vector2(40, 1056)
shape = SubResource("WorldBoundaryShape2D_20pc6")

[node name="Bottom" type="CollisionShape2D" parent="World"]
position = Vector2(8, 56)
shape = SubResource("WorldBoundaryShape2D_03owx")

[node name="Right" type="CollisionShape2D" parent="World"]
position = Vector2(504, 1056)
shape = SubResource("WorldBoundaryShape2D_wkp8b")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(8, 56)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_trn2v")

[node name="Coin" parent="." instance=ExtResource("3_trn2v")]
position = Vector2(-248, 1304)

[node name="PointLight2D2" type="PointLight2D" parent="Coin"]
texture = SubResource("GradientTexture2D_trn2v")
texture_scale = 4.57

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="powerUp" from="Player" to="." method="_on_player_power_up"]
[connection signal="collect" from="Coin" to="." method="_on_coin_collect"]
[connection signal="collect" from="Coin" to="." method="powerUp"]
